# agent-router-rs

./: Cargo.toml  Makefile
examples/: basic.rs  streaming.rs  tools.rs
src/: errors.rs  lib.rs
src/batch/: mod.rs
src/provider/: mod.rs
src/provider/anthropic/: batch.rs  client.rs  transform.rs  types.rs
src/provider/google/: batch.rs  client.rs  mod.rs  transform.rs  types.rs
src/provider/kimi/: batch.rs  client.rs  transform.rs  types.rs
src/provider/openai/: batch.rs  client.rs  mod.rs  transform.rs  types.rs
src/provider/vertex/: batch.rs  client.rs  mod.rs  types.rs
src/schema/: mod.rs
src/types/: common.rs  mod.rs  request.rs  response.rs
tests/: integration.rs
