[package]
name = "agent-router-rs"
version = "0.3.0"
edition = "2024"
description = "A unified Rust library for making LLM inference requests across multiple providers (OpenAI, Anthropic, Google/Gemini, Vertex AI)"
license = "MIT"

[lib]
name = "agent_router"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "tools"
path = "examples/tools.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
thiserror = "1"
bytes = "1"
pin-project = "1"
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
dotenvy = "0.15"

[features]
default = []
integration = []


